[package]
name = "cichlid"
version = "0.0.1"
authors = ["rob thijssen <rob@cichlid.io>"]
edition = "2021"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "threat detection and threat information sharing"
section = "admin"
priority = "optional"
assets = [
  [
    "target/release/cichlid",
    "usr/bin/cichlid",
    "755"
  ],
  [
    "debian/cichlid.service",
    "/lib/systemd/system/cichlid.service",
    "644"
  ],
]

[dependencies]
bitflags = "2.3.1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
log = "0.4.17"
regex = "1.8.3"
rocket = { version = "=0.5.0-rc.3", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
