[package]
name = "cichlid"
version = "0.1.0"
edition = "2024"

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# web + tls
hyper = { version = "0.14", features = ["full"] }
openssl = { version = "0.10", features = ["v111"] }
hyper-openssl = "0.9"
tokio-openssl = "0.6"

# for streaming TLS connections
async-stream = "0.3"
futures-util = "0.3"
