[package]
name = "cichlid"
version = "0.1.0"
edition = "2024"

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
local-ip-address = "0.5"
sled = "0.34"
chrono = "0.4"

# web + tls
hyper = { version = "0.14", features = ["full"] }
openssl = { version = "0.10.60", features = ["v111"] }
hyper-openssl = { git = "https://github.com/sfackler/hyper-openssl", tag = "0.10.2" }
tokio-openssl = "0.6"

# for streaming TLS connections
async-stream = "0.3"
futures-util = "0.3"

# cert gen
rcgen = "0.9"
get_if_addrs = "0.5"

[build-dependencies]
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
